# tribegradients

./: .gitignore  .gitmodules  compare_gradients.py  features_movie10.py  fmri_movie10.py  gradients_fmri_permovie.py  gradients_fmri_runs.py  gradients_tribe_chunks.py  main.py  pyproject.toml  ridge_regression_subject.py  ridge_regression_subject_acrossmovie.py  tribev2_tests.py  visualize_gradients.py
utils/: fmri_utils.py
